--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -45,6 +45,9 @@
     <link rel="stylesheet" type="text/css" href="/webjars/toastr/2.1.2/build/toastr.css"/>
     <script type="text/javascript" src="/webjars/toastr/2.1.2/toastr.js"></script>
 
+    <!-- dashboard -->
+    <script type=text/javascript src="/js/plugin/dashboard/slideMenu.js"></script>
+
     <!-- default css files -->
     <link rel="stylesheet" type="text/css" href="/css/reset.css"/>
 
@@ -63,5 +66,6 @@
     <script type="text/javascript" src="/js/pages/dimming.js"></script>
     <script type="text/javascript" src="/js/pages/faceDetection.js"></script>
     <script type="text/javascript" src="/js/pages/stats.js"></script>
+    <script type="text/javascript" src="/js/pages/dashboard.js"></script>
 </th:block>
 </html>
