대시보드 위치지도, 분포도 테스트 적용

--- a/danusys-platform/src/main/resources/templates/view/pages/dashboard/dashboard_facility.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/dashboard/dashboard_facility.html
@@ -38,11 +38,17 @@
         </div>
         <div class="box box_location">
             <h5>지도 위치</h5>
-            <div id="map"><!-- 지도 영역 --></div>
+            <!-- 위치맵 영역 -->
+            <div id="viewMap" class="map_wrap">
+                <canvas class="map_mouse_ban"></canvas>
+            </div>
         </div>
         <div class="box">
             <h5>유동인구 분포도</h5>
-            <div id="heatMap"><!-- 히트맵 영역 --></div>
+            <!-- 분포도 영역 -->
+            <div id="heatMap" class="map_wrap">
+                <canvas class="map_mouse_ban"></canvas>
+            </div>
         </div>
     </section>
     <section class="dashboard_section">
