--- a/danusys-commons-ui/src/main/resources/static/css/map/map.css
+++ b/danusys-commons-ui/src/main/resources/static/css/map/map.css
@@ -2,6 +2,35 @@
 /**
 * 맵관련 기본 css
 */
+
+/* map */
+.map_wrap{
+    position:relative;
+    flex:1;
+    height:100%;
+    background:#0c0c0d;
+}
+
+.map_mouse_ban {
+    position: absolute;
+    background: #ff000000;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+/* map tooltip */
+#mouseOverPopup #mouseOverPopupContent{
+    padding: 7px;
+    background: #1e1f239e;
+    box-shadow: 0px 0px 20px rgb(0 0 0 / 20%);
+    border-radius: 10px;
+}
+
+#mouseOverPopup .my-ol-popup-closer{
+    display:none;
+}
+
 #mousePosition{
     display: block;
     position: absolute;
