--- a/danusys-commons-auth-token/src/main/resources/templates/view/error.html
+++ b/danusys-commons-auth-token/src/main/resources/templates/view/error.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Basic Sample</title>
+    <link rel="stylesheet" type="text/css" href="/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="shortcut icon" th:href="${@environment.getProperty('municipality.favicon')}"/>
+    <title>Iot 플랫폼</title>
 </head>
 
 <body>
-    <table width="100%" height="100%" border="0" cellpadding="0" cellspacing="0">
-        <tr>
-            <td width="100%" height="100%" align="center" valign="middle" style="padding-top: 150px;"><table border="0" cellspacing="0" cellpadding="0">
-                    <tr>
-                        <td class="<spring:message code='image.errorBg' />">
-                        에러
-                            <span style="font-family: Tahoma; font-weight: bold; color: #000000; line-height: 150%; width: 440px; height: 70px;"></span>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
+    <div class="login_wrap">
+        <div class="login_visual">
+            <h2 class="login_title">
+                <span th:text="${@environment.getProperty('loginPage.eng.title')}"></span>
+                <br th:text="${@environment.getProperty('loginPage.kor.title')}">
+            </h2>
+        </div>
+        <div class="login_form">
+            <form class="error_form">
+                <h6><img src="/images/default/warning.svg"></h6>
+                <ul>
+                    <li>
+                        <h3 th:text="${code + ' Error'}"></h3>
+                        <span th:text="${message}"></span>
+                    </li>
+                    <li><a href="/"><span><img src="/images/default/arrowPrev.svg"></span>이전으로 돌아가기</a></li>
+                </ul>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
