--- a/danusys-platform/src/main/resources/static/css/login.css
+++ b/danusys-platform/src/main/resources/static/css/login.css
@@ -21,3 +21,14 @@
 .login_form form ul li.login_button > span > span:nth-last-child(1):hover{text-decoration: underline;}
 .login_form form ul li.login_button button{flex: 1; height: 60px; line-height: 58px; letter-spacing: 0.8px; color: #dee0e4; font-size: 20px; font-weight: 300; text-transform: uppercase; text-align: center; border-radius: 60px; border: none; background: #2f51b3; cursor: pointer;}
 .login_form form ul li.login_button button:hover{background: #3a66e5;}
+
+.login_form .error_form{justify-content: flex-start; padding: 0;}
+.login_form .error_form h6{display: flex; align-items: center; justify-content: center; height: 200px; border-bottom-left-radius: 8px; border-bottom-right-radius: 8px; background: #f04242;}
+.login_form .error_form ul{flex: 1; margin: 0; display: flex; flex-direction: column; justify-content: center; grid-gap: 40px;}
+.login_form .error_form ul li{display: flex; flex-direction: column; align-items: center; justify-content: center; grid-gap: 20px; text-align: center; line-height: 28px; color: #797d87; font-size: 36px; font-weight: bold;}
+.login_form .error_form ul li span{font-size: 16px;}
+.login_form .error_form ul li a{display: flex; align-items: center; justify-content: center; grid-gap: 14px; height: 60px; padding: 5px 20px 5px 5px; color: #797d87; font-size: 20px; font-weight: bold; border-radius: 60px; border: none; background: #242528; cursor: pointer;}
+.login_form .error_form ul li a:hover{color: #d2d2d2;}
+.login_form .error_form ul li a span{display: flex; align-items: center; justify-content: center; width: 50px; height: 50px; border-radius: 100%; background: #32343b;}
+.login_form .error_form ul li a span img{width: 22px; height: 22px;}
+.login_form .error_form ul li a:hover span img{filter: brightness(1.8);}
