--- a/danusys-platform/src/main/resources/templates/layout/layout_login.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_login.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/reset.css">
     <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet" type="text/css" href="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.css"/>
+
+    <!-- JQuery -->
+    <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
+
+    <!-- sweetAlert2-->
+    <script type=text/javascript src="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.js"></script>
+
     <script src="/js/loginWhy.js" defer ></script>
+    <script type="text/javascript" src="/js/common/common.js" ></script>
+
     <link rel="shortcut icon" th:href="${@environment.getProperty('municipality.favicon')}"/>
     <title>Iot 플랫폼</title>
 </head>
