--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -29,27 +29,15 @@
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
                     </dl>
-<!--                    <dl class="checkbox_set">-->
-<!--                        <dt>개소 상태</dt>-->
-<!--                        <dd>-->
-<!--							<span>-->
-<!--								<input type="checkbox" id="normal" name="status" data-value="normal" data-init-value="checked" checked>-->
-<!--								<label for="normal"><span></span>정상</label>-->
-<!--							</span>-->
-<!--                            <span>-->
-<!--								<input type="checkbox" id="strange" name="status" data-value="strange" data-init-value="checked" checked>-->
-<!--								<label for="strange"><span></span>이상</label>-->
-<!--							</span>-->
-<!--                        </dd>-->
-<!--                    </dl>-->
-                </div>
-                <div>
                     <p>행정구역</p>
                     <dl class="dropdown_checkbox" data-selectbox-type="administZone">
                         <dt class="checkbox_title select_title">행정구역</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
                     </dl>
+                </div>
+                <div>
+                    <p>검색어 입력</p>
                     <ul class="button">
                         <li class="input"><input type="text" name="keyword" placeholder="검색어를 입력하세요." onkeydown="if(event.keyCode==13){stations.create();}"></li>
                         <li id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</li>
@@ -82,7 +70,6 @@
                         <th>개소 관리 ID</th>
                         <th>개소 종류</th>
                         <th>개소 이름</th>
-<!--                        <th>개소 상태</th>-->
                         <th>시설물 종류</th>
                         <th>행정구역</th>
                         <th>수정</th>
