--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -68,7 +68,7 @@
 <!--                                <dd class="checkbox_list list" style="display: none;">-->
 <!--                                </dd>-->
 <!--                            </dl>-->
-                            <dl class="dropdown_checkbox" data-selectbox-type="administZone">
+                            <dl class="dropdown_checkbox" data-selectbox-type="administZone" th:attr="data-selectbox-sub-type=${@environment.getProperty('danusys.area.code.sig')}">
                                 <dt class="checkbox_title select_title">행정구역</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
@@ -133,7 +133,7 @@
 <!--                                <dd class="checkbox_list list" style="display: none;">-->
 <!--                                </dd>-->
 <!--                            </dl>-->
-                            <dl class="dropdown_checkbox" data-selectbox-type="administZone">
+                            <dl class="dropdown_checkbox" data-selectbox-type="administZone" th:attr="data-selectbox-sub-type=${@environment.getProperty('danusys.area.code.sig')}">
                                 <dt class="checkbox_title select_title">행정구역</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
@@ -261,7 +261,7 @@
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
                             </dl>-->
-                            <dl class="dropdown_checkbox" data-selectbox-type="administZone">
+                            <dl class="dropdown_checkbox" data-selectbox-type="administZone" th:attr="data-selectbox-sub-type=${@environment.getProperty('danusys.area.code.sig')}">
                                 <dt class="checkbox_title select_title">행정구역</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
