--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -30,7 +30,7 @@
                         </dd>
                     </dl>
                     <p>행정구역</p>
-                    <dl class="dropdown_checkbox" data-selectbox-type="administZone">
+                    <dl class="dropdown_checkbox" data-selectbox-type="administZone" th:attr="data-selectbox-sub-type=${@environment.getProperty('danusys.area.code.sig')}">
                         <dt class="checkbox_title select_title">행정구역</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
@@ -52,7 +52,7 @@
                     </dl>
                     <p>검색어 입력</p>
                     <ul class="button">
-                        <li class="input"><input type="text" name="keyword" placeholder="검색어를 입력하세요." onkeydown="if(event.keyCode==13){facility.create();}"></li>
+                        <li class="input"><input type="text" name="keyword" placeholder="시설물명을 입력하세요." onkeydown="if(event.keyCode==13){facility.create();}"></li>
                         <li id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</li>
                         <li id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</li>
                     </ul>
@@ -86,7 +86,7 @@
                         <th>개소 종류</th>
                         <th>개소 이름</th>
                         <th>행정구역</th>
-                        <th>상세보기</th>
+                        <!--<th>상세보기</th>-->
                     </tr>
                     </thead>
                 </table>
