--- a/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
@@ -7,7 +7,7 @@
                 <a href="#one">이벤트 조회<span>20</span></a>
                 <ul class="accordion_sub_menu"> <!--임시 css-->
 <!--                    TODO: 각 지자체의 개소 종류별 이벤트 조회하도록 수정 -->
-                    <li id="event1"><a href="/pages/inqry/event1">스마트 도시 이벤트<span>0</span></a></li>
+                    <li id="event1"><a href="/pages/inqry/smartCityEvent">스마트 도시 이벤트<span>0</span></a></li>
 <!--                    <li id="event2"><a href="/pages/inqry/event2">시설물 장애 이벤트<span>0</span></a></li>-->
                     <li th:if="${municipality == '45210000'}" id="eventCabinet"><a href="/pages/inqry/eventCabinet">스마트분전함 이벤트<span>0</span></a></li>
                     <li th:if="${municipality == '45210000'}" id="eventDron"><a href="/pages/inqry/eventDron">드론 관제 이벤트<span>0</span></a></li>
