관제 키변경 및 sse 테스트 및 메뉴별 데이터 제어 테스트

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -197,7 +197,7 @@
         </section>
         <!-- 스마트 정류장 -->
         <section th:if="${municipality == '41210000'
-                          or municipality == '47210000'}" id="smartBusStop" class="menu_fold select">
+                          or municipality == '47210000'}" id="smartBusStop" class="menu_fold">
             <ul class="tab">
                 <li data-value="event" class="active"><a>실시간</a></li>
                 <li data-value="station"><a>개소</a></li>
