광명 대기지수, 전력, 전력량, 기온 관련 시설물 및 데이터 동기화

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -301,7 +301,7 @@
                 <div class="area_right_bus_status" data-group="stationStatus">
                     <dl data-value="">
                         <dt><i><img src="/images/default/busStationState01.svg"></i>현재인원</dt>
-                        <dd><span class="value">8</span>명</dd>
+                        <dd><span class="value">-</span>명</dd>
                     </dl>
                     <dl data-value="">
                         <dt><i><img src="/images/default/busStationState05.svg"></i>대기지수</dt>
