--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/eventDefault.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/eventDefault.html
@@ -2,21 +2,21 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/layout_inqry">
 
 <th:block layout:fragment="content">
-    <h4>
+    <h4 class="milestone">
         <i><img src="/images/default/inquiryTitle.svg"></i>
         <span>조회/관리</span>
         <i><img src="/images/default/settingArrowNext.svg"></i>
-        <span>이벤트 관리</span>
+        <span></span>
         <i><img src="/images/default/settingArrowNext.svg"></i>
-        <span>스마트 도시 이벤트</span>
+        <span></span>
     </h4>
     <section class="inquiry_content" th:with="municipality=${@environment.getProperty('municipality.name')}">
         <article class="search_form" id="searchForm">
-            <h6>스마트 도시 이벤트 검색</h6>
+            <h6>이벤트 검색</h6>
             <form>
                 <div>
                     <p>이벤트 종류</p>
-                    <dl class="dropdown_checkbox" data-selectbox-type="eventKind">
+                    <dl class="dropdown_checkbox" data-selectbox-delay="true" data-selectbox-type="eventKind">
                         <dt class="checkbox_title select_title">이벤트 종류</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
@@ -51,12 +51,6 @@
 							</span>
                         </dd>
                     </dl>
-                    <p th:if="${municipality == '26290000'}">인상 착의</p>
-                    <dl class="dropdown_checkbox" data-selectbox-type="pattr" th:if="${municipality == '26290000'}">
-                        <dt class="checkbox_title select_title">인상착의</dt>
-                        <dd class="checkbox_list list" style="display: none;">
-                        </dd>
-                    </dl>
                 </div>
                 <div>
                     <p>행정구역</p>
@@ -84,40 +78,37 @@
             <div class="article_title">
                 <dl class="title">
                     <dt>스마트 도시 이벤트 목록</dt>
-                    <dd><span class="count">123</span>건</dd>
+                    <dd><span class="count">0</span>건</dd>
                 </dl>
                 <div>
                     <ul class="status_label">
-                        <li><span class="red"></span>미처리 : 5</li>
-                        <li><span class="yellow"></span>조치 완료 : 3</li>
-                        <li><span class="green"></span>이벤트 종료 : 14</li>
+                        <li><span class="red"></span>미처리 : 0</li>
+                        <li><span class="yellow"></span>조치 완료 : 0</li>
+                        <li><span class="green"></span>이벤트 종료 : 0</li>
                     </ul>
                 </div>
             </div>
             <div class="search_table">
-                <table id="cityEventTable">
+                <table>
                     <thead>
                     <tr>
-                        <!--<th>Index</th>-->
                         <th>이벤트 ID</th>
                         <th>이벤트 종류</th>
                         <th>이벤트 등급</th>
                         <th>처리 상태</th>
-                        <th>개소 관리 ID</th>
                         <th>개소 이름</th>
+                        <th>시설물 이름</th>
                         <th>행정구역</th>
-                        <th>개소 주소</th>
                         <th>이벤트 발생일시</th>
                         <th>이벤트 종료일시</th>
-                        <th>상세보기</th>
                     </tr>
                     </thead>
                 </table>
             </div>
         </article>
-        <div class="popup" id="eventPopup">
+        <div class="popup">
             <dl class="title">
-                <dt>스마트 도시 이벤트 추가</dt>
+                <dt>스마트 도시 이벤트 상세정보</dt>
                 <dd><i><img src="/images/default/close.svg"></i></dd>
             </dl>
             <div class="popup_writing">
