영주 스마트 정류장

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -305,7 +305,7 @@
                     </dl>
                     <dl data-value="stationInfo_air_index">
                         <dt><i><img src="/images/default/busStationState05.svg"></i>대기지수</dt>
-                        <!-- blue : 좋음 / green : 보통 / yellow : 나쁨 / red : 매우나쁨 -->
+                        &lt;!&ndash; blue : 좋음 / green : 보통 / yellow : 나쁨 / red : 매우나쁨 &ndash;&gt;
                         <dd class="green"><span class="value">-</span>보통</dd>
                     </dl>
                     <dl data-value="stationInfo_power">
@@ -320,9 +320,13 @@
                         <dt><i><img src="/images/default/busStationState04.svg"></i>기온</dt>
                         <dd><span class="value">-</span>&#186;&#1057;</dd>
                     </dl>
-                    <dl data-value="">
-                        <dt><i><img src="/images/default/busStationState06.svg"></i>습도</dt>
-                        <dd><span class="value">-</span>&#37;</dd>
+                    <dl data-value="yj_room_temp">
+                        <dt><i><img src="/images/default/busStationState04.svg"></i>실내기온</dt>
+                        <dd><span class="value">-</span>&#186;&#1057;</dd>
+                    </dl>
+                    <dl data-value="yj_temp">
+                        <dt><i><img src="/images/default/busStationState04.svg"></i>기온</dt>
+                        <dd><span class="value">-</span>&#186;&#1057;</dd>
                     </dl>
                 </div>
             </div>
