--- a/danusys-platform/src/main/resources/templates/view/pages/mntr.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/mntr.html
@@ -24,6 +24,8 @@
 
 <th:block layout:fragment="content">
     <!--<th:block th:insert="view/commons/map"></th:block>-->
+    <!--<input type="file" class="real-upload" accept="image/*" required multiple>-->
+
     <div id="map" class="map_wrap">
         <div class="map_button">
             <ul class="map_type">
