이벤트 상태 UI 표출 완료, 이벤트 조회 공통 기능 생성 완료

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/eventFaceDetection.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/eventFaceDetection.html
@@ -48,7 +48,7 @@
         <article class="search_list">
             <div class="article_title">
                 <dl class="title">
-                    <dt>시설물 장애 이벤트 목록</dt>
+                    <dt>용의자 · 실종자 검출 목록</dt>
                     <dd><span class="count">123</span>건</dd>
                 </dl>
                 <div>
