--- a/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
@@ -9,36 +9,31 @@
             <li id="facilities">
                 <a href="/pages/inqry/facilities">시설물 관리</a>
             </li>
-            <!--<li th:if="${municipality == '41210000' or municipality == '26290000'}" id="smartPole" class="multi">-->
-            <li id="smartPole" class="multi">
+            <li th:if="${municipality == '41210000' or municipality == '26290000'}" id="smartPole" class="multi">
                 <a href="#smartPole">스마트 폴</a>
                 <ul class="accordion_sub_menu">
-                    <!--<li th:if="${municipality == '41210000'}" id="eventSmartPole"><a href="/pages/inqry/eventSmartPole">스마트 폴 이벤트</a></li>
-                    <li th:if="${municipality == '26290000'}" id="eventFaceDetection"><a href="/pages/inqry/eventFaceDetection">용의자 · 실종자 검출</a></li>-->
-                    <li id="eventSmartPole"><a href="/pages/inqry/eventSmartPole">스마트 폴 이벤트</a></li>
-                    <li id="eventFaceDetection"><a href="/pages/inqry/eventFaceDetection">용의자 · 실종자 검출</a></li>
+                    <li th:if="${municipality == '41210000'}" id="eventSmartPole"><a href="/pages/inqry/eventSmartPole">스마트 폴 이벤트</a></li>
+                    <li th:if="${municipality == '26290000'}" id="eventFaceDetection"><a href="/pages/inqry/eventFaceDetection">용의자 · 실종자 검출</a></li>
                     <!--<li th:if="${municipality == '45210000'}" id="poleElectricity"><a href="/pages/inqry/poleElectricity">전력량 조회</a></li>-->
                 </ul>
             </li>
             <li th:if="${municipality == '41210000' or municipality == '47210000'}" id="smartBusStop" class="multi">
                 <a href="#smartBusStop">스마트 정류장</a>
                 <ul class="accordion_sub_menu">
-                    <li id="eventSmartBusStop"><a href="/pages/inqry/eventSmartBusStop">스마트 정류장 이벤트<span>0</span></a></li>
+                    <li id="eventSmartBusStop"><a href="/pages/inqry/eventSmartBusStop">스마트 정류장 이벤트</a></li>
                     <!--<li th:if="${municipality == '41210000'}" id="busStopElectricity"><a href="/pages/inqry/busStopElectricity">전력량 조회</a></li>-->
                 </ul>
             </li>
-            <!--<li th:if="${municipality == '45210000'}" id="smartCabinet" class="multi">-->
-            <li id="smartCabinet" class="multi">
+            <li th:if="${municipality == '45210000'}" id="smartCabinet" class="multi">
                 <a href="#smartCabinet">스마트 분전반</a>
                 <ul class="accordion_sub_menu">
-                    <li id="eventSmartCabinet"><a href="/pages/inqry/eventSmartCabinet">스마트 분전반 이벤트<span>0</span></a></li>
+                    <li id="eventSmartCabinet"><a href="/pages/inqry/eventSmartCabinet">스마트 분전반 이벤트</a></li>
                 </ul>
             </li>
-            <!--<li th:if="${municipality == '45210000'}" id="smartDron" class="multi">-->
-            <li id="smartDron" class="multi">
-                <a href="#smartDron">스마트 드론</a>
+            <li th:if="${municipality == '45210000'}" id="smartDrone" class="multi">
+                <a href="#smartDrone">스마트 드론</a>
                 <ul class="accordion_sub_menu">
-                    <li id="eventSmartDrone"><a href="/pages/inqry/eventSmartDrone">스마트 드론 이벤트<span>0</span></a></li>
+                    <li id="eventSmartDrone"><a href="/pages/inqry/eventSmartDrone">스마트 드론 이벤트</a></li>
                 </ul>
             </li>
             <!--<li th:if="${municipality == '45210000'}" id="five">
