대지기수 -> 미세먼지로 수정

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -304,8 +304,8 @@
                         <dd><span class="value">-</span>명</dd>
                     </dl>
                     <dl data-value="stationInfo_air_index">
-                        <dt><i><img src="/images/default/busStationState05.svg"></i>대기지수</dt>
-                        &lt;!&ndash; blue : 좋음 / green : 보통 / yellow : 나쁨 / red : 매우나쁨 &ndash;&gt;
+                        <dt><i><img src="/images/default/busStationState05.svg"></i>미세먼지</dt>
+<!--                        &lt;!&ndash; blue : 좋음 / green : 보통 / yellow : 나쁨 / red : 매우나쁨 &ndash;&gt;-->
                         <dd class="green"><span class="value">-</span>보통</dd>
                     </dl>
                     <dl data-value="stationInfo_power">
