--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/eventDefault.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/eventDefault.html
@@ -67,7 +67,7 @@
                         <span>까지</span>
                     </dl>
                     <ul class="button">
-                        <li class="input"><input type="text" name="keyword" placeholder="검색어를 입력하세요."></li>
+                        <li class="input"><input type="text" name="keyword" placeholder="개소 명을 입력하세요."></li>
                         <li id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</li>
                         <li id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</li>
                     </ul>
